stylesheet.css
/* ... */
    nav li , nav a{
        font-family: 'Noir';
        color: white;
        font-weight: 500;
        font-size: 24px;
        text-decoration: none;
    }
    .logo{
        font-family: 'Facile';
        font-size: 30px;
    }
    .nav_links{
        list-style: none;
        display: flex;
        align-items: center;
    }
    .nav_links li{
        display: inline-block;
        padding: 0px 50px;
    }
        .logo{
            text-decoration: underline;
            text-decoration-color: #F15152;
            text-decoration-thickness: 3px;
            text-underline-offset: 10px;
        }
    .nav_links li a{
        transform: all 0.3s ease 0s;
    }
    .nav_links li a:hover{
        color: #F15152;
    }  
        #Services, #Portfolio, #About_Me{
            scroll-margin-top: 5rem;
        }
    
#Introduction{
    display: flex;
    align-content: space-around;
    align-items: center;
    background-image: 
        linear-gradient(140deg,
        rgb(116, 96, 83) 0%,
        hsl(24deg 18% 36%) 0%,
        hsl(25deg 19% 33%) 1%,
        hsl(25deg 19% 30%) 3%,
        hsl(26deg 20% 27%) 6%,
        hsl(26deg 21% 24%) 10%,
        hsl(27deg 22% 21%) 17%,
        hsl(27deg 24% 19%) 26%,
        hsl(28deg 26% 16%) 41%,
        hsl(28deg 28% 13%) 79%);
}
    .Introduction_text{
        list-style: none;
        margin-left: 150px;
        margin-top: 150px;
        margin-bottom: 150px;
        margin-right: 100px;
        color: white;
    }
        .Introduction_text > a, .Introduction_text > button {
            display: inline-block;
            vertical-align: middle;
        }
        .Introduction_text ul{
            list-style-type: none;
            font-family: 'Facile';
            text-transform: uppercase;
            margin: 0;
            padding: 0;
        }
        .Introduction_text ul ul{
            padding-top: 20px;
            font-size: 80px;
        }
        .Introduction_text ul ul li{
            list-style-type: none;
            display: inline;
        }
        .Introduction_text ul:nth-child(1){
            font-size: 40px;
        }
        .Introduction_text ul ul :nth-child(2){
            -webkit-text-stroke: 2px #F15152;
            -webkit-text-fill-color: #2a2118;
        }
        .Introduction_text ul :nth-child(3) span{
            color: white;
            font-size: 20px;
            font-family: 'Noir';
            background-color: #F15152;
            padding: 7px;
        } 
    .Introduction_text p{
        font-size: 20px;
        padding: 10px; /* Match editing padding */
        margin: 20px 0; /* Use margin for vertical spacing */
        text-transform: none;
        font-family: 'Montserrat';
        text-align: justify;
        border: 2px dashed transparent; /* Add transparent border */
        border-radius: 8px; /* Match editing border-radius */
        transition: background-color 0.3s, border-color 0.3s; /* Smooth transition */
    }
    .Introduction_text p.editing {
        border-color: #F15152; /* Make border visible */
        background-color: rgba(241, 81, 82, 0.1);
        outline: none;
    }
    .Introduction_text button{
        text-transform: uppercase;
        font-family: 'Noir';
        color: white;
        background-color:#F15152;
        border-radius:28px;
        border:1px solid rgb(255, 61, 61);
        display:inline-block;
        cursor:pointer;
        font-size:17px;
        padding:15px 25px;
        margin: 10px;
    }
    #edit-desc-btn {
        text-transform: uppercase;
        font-family: 'Noir';
        color: white;
        background-color: #F15152;
        border-radius: 28px;
        border: 1px solid rgb(255, 61, 61);
        cursor: pointer;
        font-size: 17px;
        padding: 15px 25px;
        margin: 10px;
    }
    #Introduction img{
        min-width: 0px;
        max-width: 500px;
        margin-right: 150px;
        margin-left: auto;
    }

#Services{
    background-color: #746053;
    padding-top: 30px;
    padding-left: 70px;
    padding-right: 70px;
    padding-bottom: 80px;
    font-family: 'Noir';
}
    .Services_header{
        padding: 30px;
        color: white;
    }
        .Services_header ul{
            list-style-type: none;
            text-align: center;
        }
        .Services_header ul :nth-child(1){
            font-size: 60px;
            padding-bottom: 20px;
            text-decoration: underline;
            text-decoration-color:#F15152;
            text-decoration-thickness: 7px;
            text-underline-offset: 10px;
        }
        .Services_header ul :nth-child(2){
            font-size: 25px;
        }
    .Services_list{
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-column-gap: 20px;
        grid-row-gap: 20px;
        margin: auto;
        font-size: 20px;
        padding-bottom: 70px;
    }
        .Services_list div{
            align-items: center;
            justify-content: center;
            display: flex;
            background-color: aliceblue;
            height: auto;
            border-radius: 2rem;
        }
        .icons{
            max-width: 50px;
            min-width: 5px;
            height: auto;
            padding: 10px;
        }
.Skills_Portfolio{
    text-align: center;
    color: white;
    font-family: 'Noir';
}

#Skills{
    box-shadow: 0px 0px 22px -6px rgba(42,33,24,0.9);
    -webkit-box-shadow: 0px 0px 22px -6px rgba(42,33,24,0.9);
    -moz-box-shadow: 0px 0px 22px -6px rgba(42,33,24,0.9);
    background: rgb(216, 180, 157);
    margin-bottom: 50px;
    border-radius: 2rem;
    padding: 50px;
}
    .Skills{
        text-align: left;
        margin: 0;
        color: #473a2c;
        font-size: 20px;
        padding-bottom: 30px;
        text-decoration: underline;
        text-decoration-color:#F15152;
        text-decoration-thickness: 5px;
        text-underline-offset: 12px;
    }
/* ... */

